# cem

./: .gitignore  .travis.yml  404.html  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  INSTALLATION.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test_cem.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  pytest.yml  style.yml
cem/: __init__.py  att.py  cem.py  cli.py  coarsen.py  imbalance.py  match.py  matching.py  util.py
docs/: Makefile  api.rst  conf.py  index.md  index.rst  installation.rst  make.bat  readme.rst  reference.md  requirements.txt  tutorials.md  usage.rst
reference/: index.html
tests/: __init__.py  test_cem.py  test_coarsen.py  test_imbalance.py  test_match.py
tutorials/: index.html
